--- a/public/style.css
+++ b/public/style.css
@@ -9,55 +9,48 @@ html {
 }
 
 body {
-    padding: 1px;
-    margin: 0px;
-    font: 1em sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: 'Noto Sans', sans-serif;
+    background: #148dcd;
     background-size: cover;
-    color: black;
+    color: #fff;
 }
 
-title#big {
-    font: outline;
-    font-size: 30px;
-    color: blue;
-    transition: cubic-bezier(0.6, -0.28, 0.735, 0.045), red;
-}
-
-div#main {
-    position: flex;
-    width: 350px;
-    height: 200px;
-    border-bottom: 2px, black;
-    box-shadow: 2px, 2px, 5px, black;
-}
-
-div#small {
-    background-color: plum;
-    position: flex;
-    width: 150px;
-    height: 100px;
-    border-bottom: 2px, black;
-    box-shadow: 2px, 2px, 5px, black;
-}
-
-nav#menu {
+form {
+    background: #000;
+    padding: 3px;
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    display: flex;
-    align-items: flex-end;
 }
 
-input[type=button] {
-    border: none;
-    border-radius: 6px;
-    color: #333;
-    font-size: 10px;
-    padding: .75em 1em;
-    margin-bottom: 1em;
-    box-shadow: 2px, 1px, 1px, antiquewhite, inset;
+form input {
+    border: 0;
+    padding: 10px;
+    width: 90%;
+    margin-right: .5%;
 }
 
-input#redBtn {
-    background-color: red;
-    transition-property: initial;
-    transition: 1000ms, white;
+form button {
+    width: 9%;
+    background: rgb(130, 224, 255);
+    border: purple;
+    border-style: outset;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+#messages {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+#messages li {
+    padding: 5px 10px;
+}
+
+#messages li:nth-child(odd) {
+    background: #eee;
 }
