--- a/public/style.css
+++ b/public/style.css
@@ -9,48 +9,66 @@ html {
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    font-family: 'Noto Sans', sans-serif;
+    align-self: center;
+    align-content: flex-start;
+    height: 800px;
+    width: 600px;
+    font: 900;
+    border: 5px 5px 9px #000040;
+    padding: 50px;
+    margin: 50px;
+    font-family: serif;
     background: #148dcd;
-    background-size: cover;
-    color: #fff;
+    color: #464646;
+}
+
+div#app {
+    background: -moz-repeating-radial-gradient(#148dcd);
+    border: aqua, 1px, 3px, 3px;
+    width: 40%;
+    height: 75%;
 }
 
 form {
-    background: #000;
+    font: 900;
+    background: #148dcd;
     padding: 3px;
     position: fixed;
-    bottom: 0;
-    width: 100%;
+    bottom: 10%;
+    width: 75%;
 }
 
 form input {
-    border: 0;
+    border-radius: 7px;
+    border: 5px;
     padding: 10px;
-    width: 90%;
+    width: 75%;
     margin-right: .5%;
 }
 
 form button {
-    width: 9%;
-    background: rgb(130, 224, 255);
-    border: purple;
+    width: 15%;
+    border: rgb(68, 67, 68);
     border-style: outset;
-    border-radius: 3px;
+    border-radius: 7px;
     padding: 10px;
 }
 
-#messages {
+ol#msg-dis-box {
+    background: #148dcd;
+    border-radius: 7px;
+    size: 75%;
+    font: #060606;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 40px;
 }
 
-#messages li {
+ol#msg-dis-box ol {
     padding: 5px 10px;
 }
 
-#messages li:nth-child(odd) {
-    background: #eee;
+ol:nth-child(odd) {
+    font: #0000a0;
+    background: rgb(187, 186, 186);
 }
